Revert "fix: improve palette path label color for readability"
This reverts commit 5c981c35999fb754784586a0abf4773ed55c40e9.

--- a/ui/xournalpp.css
+++ b/ui/xournalpp.css
@@ -173,17 +173,6 @@ notebook frame>label {
     font-weight: bold;
 }
 
-/*
- * Labels only used for palette path information right now
- */
-.secondary-label {
-	color: #444;
-}
-
-window.darkMode .secondary-label {
-	color: #ddd;
-}
-
 
 /*
   Sidebar (page select, layer select, etc)
@@ -199,4 +188,3 @@ window.darkMode #sidebarContents {
 menubar, toolbar {
     -GtkWidget-window-dragging: false
 }
-
